<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/scan_inhaler_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConnectToInhalerButtonClick"
            android:text="@string/connect_to_inhaler" />

        <Button
            android:id="@+id/scan_wearable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConnectToWearableButtonClick"
            android:text="@string/connect_to_wearable" />

        <Button
            android:id="@+id/export_all_iue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exportAllIUEs"
            android:text="@string/export_data_as_csv" />

        <Button
            android:id="@+id/clear_iue_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearIUEs"
            android:text="@string/clear_iues" />

        <!-- delete later. Leave hardcoded string-->
        <Button
            android:id="@+id/simulate_iue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSimulateIUEButtonClick"
            android:text="@string/simulate_iue" />

        <Button
            android:id="@+id/test_wearable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="testWearableData"
            android:text="@string/test_wearable" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>