<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryEntryActivity">

    <TextView
        android:id="@+id/diary_entry_activity_header"
        style="@style/pane_header"
        android:text="@string/diary_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/entry_date_label"
        style="@style/generic_word_content"
        android:text="@string/null_diary_entry_screen_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_entry_activity_header" />

    <Button
        android:id="@+id/rescue_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/tag_button_width"
        android:layout_height="@dimen/tag_button_height"
        android:layout_marginStart="@dimen/tag_button_side_margin"
        android:layout_marginTop="@dimen/tag_button_top_margin"
        android:background="@android:color/holo_purple"
        android:text="@string/rescue_button_label"
        android:textSize="@dimen/tag_button_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_date_label" />

    <Button
        android:id="@+id/preventative_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/tag_button_width"
        android:layout_height="@dimen/tag_button_height"
        android:layout_marginTop="@dimen/tag_button_top_margin"
        android:layout_marginEnd="@dimen/tag_button_side_margin"
        android:background="@android:color/holo_blue_light"
        android:text="@string/preventative_button_label"
        android:textSize="@dimen/tag_button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_date_label" />

    <EditText
        android:id="@+id/edit_diary_entry_text"
        android:layout_width="@dimen/diary_edit_text_box_width"
        android:layout_height="@dimen/diary_edit_text_box_height"
        android:layout_marginTop="@dimen/edit_text_top_margin"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/edit_diary_entry_text_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_date_label" />

    <Button
        android:id="@+id/diary_entry_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tag_button_top_margin"
        android:layout_marginEnd="@dimen/tag_button_side_margin"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/save_button_label"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diary_entry_text"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>